Reworked how disqualifications are done, it's now a post-race thing.

--- a/SimTECH/SimTECH/Components/DriverGraphic.razor.css
+++ b/SimTECH/SimTECH/Components/DriverGraphic.razor.css
@@ -7,6 +7,7 @@
     border-bottom-right-radius: 15px;
     width: 890px;
     height: 105px;
+    font-family: "F1Regular";
 }
 
     #driver-graphic #position {
