--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -1,6 +1,14 @@
 ﻿<h3>Credits</h3>
 <p>sokje for human being generator and f1 graphics generator</p>
 
+<MudGrid>
+    <MudItem xs="12"></MudItem>
+    <MudItem xs="6">
+        <DriverGraphic FirstName="Lol" LastName="Sokje" Abbreviation="SOK" Number="19"
+                       Team="Racing Team" Colour="@Color.Secondary.ToString()" Position="1" />
+    </MudItem>
+</MudGrid>
+
 @code {
 
 }
