--- a/SimTECH/SimTECH/Components/DriverGraphic.razor
+++ b/SimTECH/SimTECH/Components/DriverGraphic.razor
@@ -1,8 +1,10 @@
 ﻿<!-- Credits to lolsokje for the graphics inside this component -->
 
 <div id="driver-graphic">
-    <div id="position">@Position</div>
-    <div id="divider"></div>
+    <div id="position" class="@_positionClass" style="@_positionStyles">
+        @Position
+    </div>
+    <div id="divider" style="@_dividerStyles"></div>
 
     <div id="details">
         <div id="name">
@@ -12,7 +14,7 @@
         <div id="team">@Team</div>
     </div>
 
-    <div id="extra">
+    <div id="extra" style="@_extraStyles">
         <div id="number">@Number</div>
 
         <div id="tla">@Abbreviation</div>
@@ -23,10 +25,10 @@
     [Parameter] public string FirstName { get; set; } = "Firstname";
     [Parameter] public string LastName { get; set; } = "Lastname";
     [Parameter] public string Abbreviation { get; set; } = "XXX";
-    [Parameter] public string Team { get; set; } = "Team";
     [Parameter] public int Number { get; set; }
-    [Parameter] public int Position { get; set; }
+    [Parameter] public string Team { get; set; } = "Team";
     [Parameter] public string Colour { get; set; } = Constants.DefaultColour;
+    [Parameter] public int Position { get; set; }
     [Parameter] public bool Eliminated { get; set; }
 
     private string _upperLastname
@@ -34,6 +36,39 @@
         get
         {
             return LastName.ToUpperInvariant();
+        }
+    }
+
+    private string _positionClass
+    {
+        get
+        {
+            return Eliminated ? "eliminated" : string.Empty;
+        }
+    }
+
+    private string _positionStyles
+    {
+        get
+        {
+            var fontSize = Position > 9 ? 48 : 33;
+            return $"font-size:{fontSize}px";
+        }
+    }
+
+    private string _dividerStyles
+    {
+        get
+        {
+            return $"background-color:{Colour}";
+        }
+    }
+
+    private string _extraStyles
+    {
+        get
+        {
+            return $"color:{Colour}";
         }
     }
 }
