--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: "F1Regular";
-    src: url("fonts/Formula1-Regular.otf") format("opentype");
+    src: url("../fonts/Formula1-Regular.otf") format("opentype");
 }
 
 @font-face {
     font-family: "F1Bold";
-    src: url("fonts/Formula1-Bold.otf") format("opentype");
+    src: url("../fonts/Formula1-Bold.otf") format("opentype");
 }
 
 @font-face {
     font-family: "F1Wide";
-    src: url("fonts/Formula1-Wide.otf") format("opentype");
+    src: url("../fonts/Formula1-Wide.otf") format("opentype");
 }
 
 html, body {
