--- a/SimTECH/SimTECH/Components/ReorderList.razor
+++ b/SimTECH/SimTECH/Components/ReorderList.razor
@@ -1,4 +1,6 @@
-﻿@* NOTE: goal is to use this in a generic way, not sure yet though how to pass any list and handle it generically *@
+﻿@* NOTE: goal is to use this in a generic way, not sure yet though how to pass any list and handle it generically 
+    Actually I don't think we're going to use this ever in the first place but hey it's cool code
+*@
 
 <div>
     <ul ondragover="event.preventDefault();" ondragstart="event.dataTransfer.setData('', event.target.id);">
