--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -192,7 +192,7 @@
                 ["Race"] = item,
                 ["Tracks"] = availableTracks,
                 ["SeasonId"] = Season.Id,
-                ["IncomingRound"] = (RaceCalendar.Count + 1),
+                ["IncomingRound"] = item.Round,
                 ["DefaultRaceLength"] = seasonLeague.RaceLength,
             };
 
