--- a/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
@@ -2,6 +2,8 @@
 @inject TeamService TeamService
 @inject DriverService DriverService
 
+<!-- Wow this is a good target for making it more generic as all three containers seem to be the same wow -->
+
 <MudContainer>
     <MudText Typo="Typo.h4">Engines</MudText>
     <MudGrid>
