--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -16,10 +16,10 @@
                                 <MudTextField T="string" @bind-Value="model.LastName" Label="Last Name" Class="field-md" />
                             </MudStack>
                             <MudTextField T="string" @bind-Value="model.Abbreviation" Label="Abbreviation" Class="field-sm" />
-                            <MudDatePicker @bind-Date="@dateSetter" Label="Date of Birth" Class="field-md" />
+                            <MudDatePicker @bind-Date="@dateSetter" Editable="true" Label="Date of Birth" Class="field-md" />
                             <MudCountrySelect @bind-Value="model.Country" Class="field-md" />
                             <MudTextField T="string" @bind-Value="model.Biography" Label="Biography" Lines="5" />
-                            <MudCheckBox @bind-Checked="model.Alive" Label="Is alive?" Color="Color.Secondary" />
+                            <MudSwitchM3 @bind-Checked="model.Alive" Label="Alive" Color="Color.Secondary" ThumbIcon="@Icons.Material.Filled.Done" ThumbOffIcon="@Icons.Material.Filled.Close" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
