--- a/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
@@ -20,7 +20,7 @@
             <col />
         </ColGroup>
         <Columns>
-            <TemplateColumn Title="Driver" Sortable="false">
+            <TemplateColumn T="PowerRankModel" SortBy="e => e.DriverName" Title="Driver">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">
                         <CountryFlag Code="@context.Item.Nationality" Size="FlagSize.Small" />
@@ -28,28 +28,28 @@
                     </MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.DriverNumber" Title="No." CellClass="number-col" CellStyleFunc="FullStyleFunc" Sortable="false" />
+            <PropertyColumn Property="e => e.DriverNumber" SortBy="e => e.DriverNumber" Title="No." CellClass="number-col" CellStyleFunc="FullStyleFunc" />
             <PropertyColumn Property="e => e.TeamName" Title="Team" CellStyleFunc="@SimpleCellStyle" />
             <PropertyColumn Property="e => e.Engine" />
             <PropertyColumn Property="e => e.Manufacturer" />
             <PropertyColumn Property="e => e.QualyPower" />
             <PropertyColumn Property="e => e.RacePower" />
-            <TemplateColumn Title="A/C/P" Sortable="false">
+            <TemplateColumn T="PowerRankModel" Title="A/C/P" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Reliability [D/T/E]" Sortable="false">
+            <TemplateColumn T="PowerRankModel" Title="Reliability [D/T/E]" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.DriverRel / @context.Item.CarRel / @context.Item.EngineRel</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Wear" Sortable="false">
+            <TemplateColumn T="PowerRankModel" Title="Wear" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.WearMax ↔ @context.Item.WearMin</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="RngMod" Sortable="false">
+            <TemplateColumn T="PowerRankModel" Title="RngMod" Sortable="false">
                 <CellTemplate>
                     @if (context.Item.TraitEffect != null)
                     {
