--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -19,7 +19,7 @@
             <PropertyColumn Property="e => e.FullName" Title="Name" />
             <PropertyColumn Property="e => e.Abbreviation" />
             <PropertyColumn Property="e => e.DateOfBirth" Title="DOB" Format="d" />
-            <TemplateColumn T="Driver" Title="Nationality" Sortable="false">
+            <TemplateColumn T="Driver" Title="Nationality" SortBy="e => e.Country">
                 <CellTemplate>
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
