--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -15,21 +15,25 @@
         <Columns>
             <HierarchyColumn T="Track" />
             <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.Country" />
+            <TemplateColumn T="Track" Title="Country" SortBy="e => e.Country">
+                <CellTemplate>
+                    <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
+                </CellTemplate>
+            </TemplateColumn>
             <PropertyColumn Property="e => e.Length" Title="Length (Km)" />
-            <TemplateColumn Title="Aero">
+            <TemplateColumn T="Track" Title="Aero">
                 <CellTemplate>@(context.Item.AeroMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Chassis">
+            <TemplateColumn T="Track" Title="Chassis">
                 <CellTemplate>@(context.Item.ChassisMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Powertrain">
+            <TemplateColumn T="Track" Title="Powertrain">
                 <CellTemplate>@(context.Item.PowerMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Qualifying">
+            <TemplateColumn T="Track" Title="Qualifying">
                 <CellTemplate>@(context.Item.QualifyingMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Class="d-flex justify-end">
+            <TemplateColumn T="Track" Class="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context.Item))" />
